# gemctl

./: .gitignore  Makefile  README.md  agentspace.py  gemctl.sh  install-gemctl-wrapper.sh  pyproject.toml  requirements.txt  uninstall-gemctl-wrapper.sh
gemctl/: __init__.py  __main__.py  cli.py
tests/: __init__.py  test_cli.py
