[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gemctl"
version = "1.0.0"
description = "CLI tool for managing Google Cloud Agentspace (Discovery Engine) resources"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "BCBSMA"},
]
keywords = ["google-cloud", "agentspace", "discovery-engine", "cli", "gcloud"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Systems Administration",
]

dependencies = [
    "google-auth>=2.23.0",
    "google-auth-httplib2>=0.1.1",
    "requests>=2.31.0",
    "click>=8.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.scripts]
gemctl = "gemctl.cli:cli"

[project.urls]
Homepage = "https://github.com/bcbsma/gemctl"
Repository = "https://github.com/bcbsma/gemctl"
Documentation = "https://github.com/bcbsma/gemctl#readme"
Issues = "https://github.com/bcbsma/gemctl/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["gemctl*"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
